tambah three js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     
     <script src="js/libs/three.min.js"></script>
+    <script src="js/libs/three.js"></script>
     <script src="js/libs/stats.js"></script>
     <script src="js/libs/utils/SceneUtils.js"></script>
     <script src="js/libs/utils/d3-threeD.js"></script>
